--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "svelte": "^3.0.0"
   },
   "dependencies": {
+    "@splidejs/splide": "^2.4.21",
     "animejs": "^3.2.1",
     "sirv-cli": "^1.0.0"
   }
